--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "classnames": "2.5.1",
+    "firebase": "^12.0.0",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
