--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,23 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020"],
-    "module": "commonjs",
-    "outDir": "lib",
-    "rootDir": "src",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
     "strict": true,
-    "moduleResolution": "node",
+    "noEmit": true,
     "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "compileOnSave": true
+  "include": ["next-env.d.ts", "src/**/*", "tailwind.config.ts"],
+  "exclude": ["node_modules", "functions", "functions/**"]
 }
