--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "@types/node": "24.1.0",
-    "@types/react": "19.1.9",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "10.4.18",
     "postcss": "8.4.31",
     "tailwindcss": "3.4.4",
